feat: Configure data layer with EF Core and SQLite

--- a/TaskManagerApi/appsettings.json
+++ b/TaskManagerApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "DataSource=tasks.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
